--- a/README.rdoc
+++ b/README.rdoc
@@ -1,32 +1,10 @@
 == README
   
 # SearchUsername
-SearchUsername is a simple application to see user information with username
+SearchUsername is a simple application to see user information with username.
+
+url
+
+Requires Ruby 1.9.2 or higher.
   
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Does not require Database
